--- a/src/DesignEngine/H.LowCode.Workbench/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.Extensions.Options
 @using Microsoft.JSInterop
 @using System.Net
 @using System.Net.Http
@@ -13,5 +14,7 @@
 @using H.LowCode.Workbench
 @using H.LowCode.MetaSchema
 @using H.LowCode.PartsMetaSchema
+@using H.LowCode.Configuration
 @using H.LowCode.Model
+@using H.LowCode.DesignEngine.Model
 @using H.Util.Blazor
