--- a/src/DesignEngine/H.LowCode.MyApp/Pages/AppPublish.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/AppPublish.razor
@@ -1,6 +1,6 @@
 ﻿@page "/myapp/{AppId}/publish"
-@namespace H.LowCode.DesignEngine.Admin
-@layout DesignEngineAdminLayout
+@namespace H.LowCode.MyApp
+@layout MyAppLayout
 
 <PageTitle>应用发布</PageTitle>
 
