--- a/src/DesignEngine/H.LowCode.MyApp/Pages/DataSource/DataSourceTable.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/DataSource/DataSourceTable.razor
@@ -1,4 +1,4 @@
-﻿@namespace H.LowCode.DesignEngine.Admin
+﻿@namespace H.LowCode.MyApp
 
 @* 数据表基本信息 *@
 <Descriptions Style="margin: 0 0 8px 0;" Bordered>
