--- a/src/DesignEngine/H.LowCode.MyApp/Pages/DataSourceManager.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/DataSourceManager.razor
@@ -1,6 +1,6 @@
 ﻿@page "/myapp/{AppId}/datasource"
-@namespace H.LowCode.DesignEngine.Admin
-@layout DesignEngineAdminLayout
+@namespace H.LowCode.MyApp
+@layout MyAppLayout
 
 <PageTitle>数据源管理</PageTitle>
 
