--- a/src/DesignEngine/H.LowCode.MyApp/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/_Imports.razor
@@ -10,7 +10,7 @@
 @using AntDesign.ProLayout
 @using AntDesign.TableModels
 @using H.Extensions.System
-@using H.LowCode.DesignEngine.Admin
+@using H.LowCode.MyApp
 @using H.LowCode.DesignEngine.Model
 @using H.LowCode.MetaSchema
 @using H.Util.Blazor
