--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/Components/App.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/Components/App.razor
@@ -16,11 +16,11 @@
 
     <link href="manifest.json" rel="manifest" />
 
-    <HeadOutlet @rendermode="@(new InteractiveAutoRenderMode(false))" />
+    <HeadOutlet @rendermode="@(new InteractiveAutoRenderMode(true))" />
 </head>
 
 <body>
-    <Routes @rendermode="@(new InteractiveAutoRenderMode(false))" />
+    <Routes @rendermode="@(new InteractiveAutoRenderMode(true))" />
     
     <script src="_framework/blazor.web.js"></script>
 </body>
