新增 H.LowCode.EntityFrameworkCore 用于数据存储（空应用，待实现） 新增 H.LowCode.DbMigrator 用于数据库迁移（空应用，待实现）

--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/HomePage.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/HomePage.razor
@@ -1,4 +1,5 @@
-﻿@page "/{AppId}/index"
+﻿@page "/"
+@page "/{AppId}/index"
 @namespace H.LowCode.ThemeParts.AntBlazor
 @layout AntBlazorThemeLayout
 
