--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/TablePropertyItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySettingItems/TablePropertyItem.razor
@@ -20,7 +20,7 @@
 }
 <hr color="#f6f6f6" />
 
-<div style="display: flex; justify-content: space-between;">
+<div style="display: flex; justify-content: space-between; margin-top: 20px;">
     <div>
         表格按钮
     </div>
