- 数据源管理-数据表 实现

--- a/src/DesignEngine/H.LowCode.DesignEngine/Pages/PageDesigner.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Pages/PageDesigner.razor
@@ -134,7 +134,7 @@
 
         _pageSchema.Components = DragDropStateService.GetRootComponent(_pageSchema.AppId, _pageSchema.Id).Childrens;
         _pageSchema.PageProperty = DragDropStateService.GetGlobalPageProperty(AppId, PageId);
-        _pageSchema.DataSource = new DataSourceSchema() { DataSourceType = DataSourceEnum.Table };
+        _pageSchema.DataSource = new DataSourceSchema() { DataSourceType = DataSourceTypeEnum.Table };
         return _pageSchema;
     }
 
