--- a/src/DesignEngine/H.LowCode.MyApp/Pages/DataSourceManager.razor
+++ b/src/DesignEngine/H.LowCode.MyApp/Pages/DataSourceManager.razor
@@ -4,170 +4,21 @@
 
 <PageTitle>数据源管理</PageTitle>
 
-<Tabs DefaultActiveKey="tab_datasource_table" OnChange="OnTabChange" Animated>
+<Tabs DefaultActiveKey="tab_datasource_table" Animated>
     <TabPane Tab="数据表" Key="tab_datasource_table">
-        <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
-            <div style="width:250px;">
-                <Search Placeholder="表名、表中文名" OnSearch="()=>{}" />
-            </div>
-            <div style="width:80px; line-height:32px; margin: 0 22px 0 0;">
-                <Button Type="@ButtonType.Primary" OnClick="CreateTableAsync">新建数据表</Button>
-            </div>
-        </div>
-        <Table TItem="DataSourceSchema" DataSource="@_dataSourceTables" Total="_total"
-               @bind-PageIndex="@_pageIndex" @bind-PageSize="@_pageSize">
-            <PropertyColumn Title="表名" Property="c=>c.Key" Sortable />
-            <PropertyColumn Title="表中文名" Property="c=>c.Name" Sortable />
-            <PropertyColumn Title="修改人" Property="c=>c.ModifiedUser" />
-            <PropertyColumn Title="修改时间" Property="c=>c.ModifiedTime" Format="yyyy-MM-dd HH:mm:ss" />
-            <PropertyColumn Title="发布状态" Property="c=>c.PublishStatus" />
-            <ActionColumn Title="操作">
-                <Space Size=@("middle")>
-                    <SpaceItem>
-                        <a onclick="@(()=>EditTableAsync(@context))">编辑</a>
-                    </SpaceItem>
-                    <SpaceItem>
-                        <a onclick="@(()=>DeleteAsync(@context.Id))" style="color:#ff4d4f">删除</a>
-                    </SpaceItem>
-                    <SpaceItem>
-                        <a onclick="@(()=>PublishAsync(@context.Id))" style="color:green">发布</a>
-                    </SpaceItem>
-                </Space>
-            </ActionColumn>
-        </Table>
+        <TableDataSource AppId="@AppId"></TableDataSource>
     </TabPane>
 
     <TabPane Tab="API" Key="tab_datasource_api">
-        <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
-            <div style="width:250px;">
-                <Search Placeholder="表名、表中文名" OnSearch="()=>{}" />
-            </div>
-            <div style="width:80px; line-height:32px;">
-                <Button Type="@ButtonType.Primary" OnClick="CreateAPIAsync">新建API</Button>
-            </div>
-        </div>
-        <Table TItem="DataSourceSchema" DataSource="@_dataSourceAPIs" Total="_total"
-               @bind-PageIndex="@_pageIndex" @bind-PageSize="@_pageSize">
-            <PropertyColumn Title="API 标识" Property="c=>c.Key" Sortable />
-            <PropertyColumn Title="API 中文名" Property="c=>c.Name" Sortable />
-            <PropertyColumn Title="修改人" Property="c=>c.ModifiedUser" />
-            <PropertyColumn Title="修改时间" Property="c=>c.ModifiedTime" Format="yyyy-MM-dd HH:mm:ss" />
-            <PropertyColumn Title="发布状态" Property="c=>c.PublishStatus" />
-            <ActionColumn Title="操作">
-                <Space Size=@("middle")>
-                    <SpaceItem>
-                        <a onclick="@(()=>EditAPIAsync(@context))">编辑</a>
-                    </SpaceItem>
-                    <SpaceItem>
-                        <a onclick="@(()=>DeleteAsync(@context.Id))" style="color:#ff4d4f">删除</a>
-                    </SpaceItem>
-                    <SpaceItem>
-                        <a onclick="@(()=>PublishAsync(@context.Id))" style="color:green">发布</a>
-                    </SpaceItem>
-                </Space>
-            </ActionColumn>
-        </Table>
+        <APIDataSource AppId="@AppId"></APIDataSource>
+    </TabPane>
+
+    <TabPane Tab="选项" Key="tab_datasource_option">
+        <OptionDataSource AppId="@AppId"></OptionDataSource>
     </TabPane>
 </Tabs>
-
-<Modal Title="@_modalTitle" @bind-Visible="@_visible" Width="1100" Resizable="true" Draggable="true">
-    @if (_currentDataSource != null)
-    {
-        if (_currentDataSource.DataSourceType == DataSourceEnum.Table)
-        {
-            <DataSourceTable DataSource="@_currentDataSource"></DataSourceTable>
-        }
-        else if (_currentDataSource.DataSourceType == DataSourceEnum.API)
-        {
-            <DataSourceAPI DataSource="@_currentDataSource"></DataSourceAPI>
-        }
-    }
-</Modal>
 
 @code {
     [Parameter]
     public string AppId { get; set; }
-
-    int _pageIndex = 1;
-    int _pageSize = 10;
-    int _total = 0;
-
-    private IEnumerable<DataSourceSchema> _dataSourceTables =
-    [
-        new (){ Key = "table1", Name="数据表1", DataSourceType = DataSourceEnum.Table,
-        DataSourceTableFields =
-        [
-          new(){ FieldKey = "field1", FieldName="字段1", FieldType = "varchar(50)" },
-          new(){ FieldKey = "field2", FieldName="字段2", FieldType = "varchar(50)" },
-          new(){ FieldKey = "field3", FieldName="字段3", FieldType = "varchar(50)" }
-        ] },
-    new (){ Key = "table2", Name="数据表2", DataSourceType = DataSourceEnum.Table }
-    ];
-
-    private IEnumerable<DataSourceSchema> _dataSourceAPIs = 
-    [
-        new (){ Key = "api1", Name="API1", DataSourceType = DataSourceEnum.API },
-    new (){ Key = "api2", Name="API2", DataSourceType = DataSourceEnum.API }
-    ];
-
-    private DataSourceSchema _currentDataSource;
-
-    private bool _visible;
-    private string _modalTitle;
-
-    private void OnTabChange(string tabKey)
-    {
-        if (tabKey == "tab_datasource_table")
-            _currentDataSource = new() { DataSourceType = DataSourceEnum.Table };
-        else if (tabKey == "tab_datasource_api")
-            _currentDataSource = new() { DataSourceType = DataSourceEnum.API };
-        else
-            _currentDataSource = new() { };
-    }
-
-    private async Task CreateTableAsync()
-    {
-        await Task.Delay(1);
-        _currentDataSource = new(){ DataSourceType = DataSourceEnum.Table };
-        _visible = true;
-        _modalTitle = "新建数据表";
-        StateHasChanged();
-    }
-
-    private async Task EditTableAsync(DataSourceSchema dataSource)
-    {
-        await Task.Delay(1);
-        _currentDataSource = dataSource;
-        _visible = true;
-        _modalTitle = "编辑数据表";
-        StateHasChanged();
-    }
-
-    private async Task CreateAPIAsync()
-    {
-        await Task.Delay(1);
-        _currentDataSource = new(){ DataSourceType = DataSourceEnum.API };
-        _visible = true;
-        _modalTitle = "新建 API";
-        StateHasChanged();
-    }
-
-    private async Task EditAPIAsync(DataSourceSchema dataSource)
-    {
-        await Task.Delay(1);
-        _currentDataSource = dataSource;
-        _visible = true;
-        _modalTitle = "编辑 API";
-        StateHasChanged();
-    }
-
-    private async Task DeleteAsync(string id)
-    {
-        await Task.Delay(1);
-    }
-
-    private async Task PublishAsync(string id)
-    {
-        await Task.Delay(1);
-    }
 }
