- ComponentPropertySchema 新增 IsSupportDataSource 属性，用于控制 PropertySetting.razor 中是否显示 "数据源" 配置项 - H.LowCode.MetaSchema 中所有 Enum 枚举全部提取为独立文件 - 页面背景色由默认灰色改为 白色

--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/Components/App.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/Components/App.razor
@@ -16,11 +16,11 @@
 
     <link href="manifest.json" rel="manifest" />
 
-    <HeadOutlet @rendermode="@(new InteractiveAutoRenderMode(true))" />
+    <HeadOutlet @rendermode="@(new InteractiveAutoRenderMode(false))" />
 </head>
 
 <body>
-    <Routes @rendermode="@(new InteractiveAutoRenderMode(true))" />
+    <Routes @rendermode="@(new InteractiveAutoRenderMode(false))" />
     
     <script src="_framework/blazor.web.js"></script>
 </body>
