--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LcBaiduMap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LcBaiduMap.razor
@@ -1,5 +1,4 @@
-﻿@using H.LowCode.MetaSchema
-@namespace H.LowCode.ComponentParts.ExtensionComponents
+﻿@namespace H.LowCode.ComponentParts.ExtensionComponents
 @inherits LowCodeComponentBase
 
 <div style="height: auto;">
