--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/wwwroot/renderengine.css
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/wwwroot/renderengine.css
@@ -9,6 +9,7 @@
 
 .renderengine .ant-layout, .renderengine .ant-pro-basicLayout-content {
     height: 100%;
+    background-color: #ffffff;
 }
 
 .renderengine .ant-pro-basicLayout-children-content-wrap, .renderengine .ant-layout-content {
