--- a/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/ContainerComponentBase.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/ContainerComponentBase.razor
@@ -1,4 +1,5 @@
-﻿@using H.LowCode.MetaSchema
+﻿@namespace H.LowCode.DesignEngine.Abstraction
+@inherits LowCodeComponentBase
 
 @code {
     [Parameter]
