--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/_Imports.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/_Imports.razor
@@ -1,6 +1,9 @@
-﻿@using Microsoft.AspNetCore.Components.Web
-@using System.Text.Json;
-@using AntDesign;
+﻿@using System.ComponentModel.DataAnnotations
+@using System.Text.Json
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.JSInterop
+@using AntDesign
+@using AntDesign.TableModels
 @using H.LowCode.ComponentBase
 @using H.LowCode.DesignEngine.Abstraction
 @using H.LowCode.DesignEngine
