--- a/src/RenderEngine/H.LowCode.RenderEngine/ComponentRender/ComponentRender.razor.css
+++ b/src/RenderEngine/H.LowCode.RenderEngine/ComponentRender/ComponentRender.razor.css
@@ -1,6 +1,6 @@
 ﻿.renderengine-componentitem-box {
     height: 85px;
-    border: #f0f2f5 solid 2px;
+    border: #ffffff solid 2px;
     position: relative;
     display: flex;
     padding: 20px 8px 5px 8px;
